@@ -37,6 +37,7 @@ test:
 	perl -I $(top_builddir) -I $(top_srcdir) ../test.pl
 	perl -I $(top_builddir) -I $(top_srcdir) ../test.pl t/utils.t	# utils.t is excluded from above, so manually ask to test
 	for SCRIPT in *.pl; do perl -wc $$SCRIPT || exit 1; done
+	set -e; for SCRIPT in *.sh; do sh -n $$SCRIPT || exit 1; done
 
 test-debug:
 	NPTEST_DEBUG=1 HARNESS_VERBOSE=1 perl -I $(top_builddir) -I $(top_srcdir) ../test.pl
